// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Loading fullscreen with tag and label 1`] = `
<div
  class="sc-dkPtyc ktJCZe"
>
  <div
    class="sc-gsDJrp bYhHee"
  >
    <p
      aria-label="Printing."
      class="sc-bdvvaa etEPtU"
    >
      Printing
    </p>
  </div>
</div>
`;

exports[`Renders Loading with defaults 1`] = `
<div
  class="sc-gsDJrp bYhHee"
>
  <h1
    aria-label="Loading."
    class="sc-bdvvaa etEPtU"
  >
    Loading
  </h1>
</div>
`;
